--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ chardet==3.0.4
 cycler==0.10.0
 decorator==4.4.0
 defusedxml==0.6.0
+docopt==0.6.2
 docutils==0.14
 entrypoints==0.3
 gensim==3.8.0
+hdfs==2.5.8
 idna==2.8
 ipykernel==5.1.1
 ipython==7.7.0
