--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ ipywidgets==7.5.1
 jedi==0.14.1
 Jinja2==2.10.1
 jmespath==0.9.4
+joblib==0.13.2
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.3.1
@@ -41,10 +42,12 @@ pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+pkg-resources==0.0.0
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 ptyprocess==0.6.0
 Pygments==2.4.2
+pymongo==3.8.0
 pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
@@ -53,10 +56,12 @@ pyzmq==18.0.2
 qtconsole==4.5.2
 requests==2.22.0
 s3transfer==0.2.1
+scikit-learn==0.21.3
 scipy==1.3.0
 seaborn==0.9.0
 Send2Trash==1.5.0
 six==1.12.0
+sklearn==0.0
 smart-open==1.8.4
 terminado==0.8.2
 testpath==0.4.2
